--- a/index.html
+++ b/index.html
@@ -527,10 +527,10 @@
           alert("Ingrese el asunto")
 
         } else if(Mensaje.length==0) {
-          alert("Ingrese el asunto")
+          alert("Ingrese el Mensaje")
 
         }else {
-          
+
         let url = "https://wa.me/+51986394402?text=" + 
         "Hola!%20Me%20llamo%20" + encodeURIComponent(Nombre) + 
         "%20Me%20comunico%20por:%20" + encodeURIComponent(Asunto) + 
